<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    tools:context="com.example.madaim.ex7.RegisterActivity">

    <TextView
        android:id="@+id/tvFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/FirstName"
        android:layout_marginStart="47dp"
        android:layout_marginTop="75dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tvLast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/LastName"
        android:layout_marginTop="77dp"
        android:layout_below="@+id/editText"
        android:layout_toStartOf="@+id/editText" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvFirst"
        android:layout_alignBottom="@+id/tvFirst"
        android:layout_toEndOf="@+id/tvFirst"
        android:id="@+id/editText" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvLast"
        android:layout_alignBottom="@+id/tvLast"
        android:layout_toEndOf="@+id/tvLast"
        android:id="@+id/editText2" />

    <RadioGroup
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:layout_marginStart="39dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/editText2"
        android:layout_alignParentStart="true">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/Male" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/Female" />

    </RadioGroup>

    <Button
        android:id="@+id/button2"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/SendBackBuuton"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:background="@drawable/border2"
        android:onClick="onButtonClick"
        />


</RelativeLayout>
